--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Frontend Mentor | Single Price Grid Component</title>
   </head>
   <body>
@@ -32,27 +32,25 @@
           skills.
         </p>
       </div>
-      <div class="price-grid__bottom">
-        <div>
-          <h3>Monthly Subscription</h3>
-          <p class="price-grid__price">&dollar;29 <span>per month</span></p>
-          <p class="price-grid__benefit">
-            Full access for less than &dollar;1 a day
-          </p>
-          <button class="price-grid__signup-btn">Sign Up</button>
-        </div>
-        <div>
-          <h3>Why Us</h3>
-          <ul>
-            <li>Tutorials by industry experts</li>
-            <li>Peer &amp; expert code review</li>
-            <li>Coding exercises</li>
-            <li>Access to our GitHub repos</li>
-            <li>Community forum</li>
-            <li>Flashcard decks</li>
-            <li>New videos every week</li>
-          </ul>
-        </div>
+      <div class="price-grid__pricing">
+        <h3>Monthly Subscription</h3>
+        <p class="price-grid__price">&dollar;29 <span>per month</span></p>
+        <p class="price-grid__benefit">
+          Full access for less than &dollar;1 a day
+        </p>
+        <button class="price-grid__signup-btn">Sign Up</button>
+      </div>
+      <div class="price-grid__why">
+        <h3>Why Us</h3>
+        <ul>
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
       </div>
     </div>
     <footer role="contentinfo">
@@ -60,7 +58,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Raul</a>.
       </p>
     </footer>
   </body>
