Remove role from footer.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ul>
       </div>
     </div>
-    <footer role="contentinfo">
+    <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
